--- a/tajmahal.css
+++ b/tajmahal.css
@@ -114,3 +114,29 @@ p{
     text-align: center;
 }
 
+
+.third{
+    justify-content: center;
+    text-align: center;
+}
+
+.third iframe{
+    border-radius: 10%;
+    height: 300px;
+    width: 400px;
+    padding: 30px;
+}
+
+.fourth{
+    text-align: center;
+
+}
+
+.fourth a{
+    color: black;
+    font-family: "Sora", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: <weight>;
+    font-style: normal;
+    padding: 10px 10px 10px 20px;
+}
